--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h1,h4
 <center>
 <h1>Keyboard keys</h1>
 	<!--- Create Canvas element --->
-	<canvas id="myCanvas" width="500 height="300"></canvas>
+	<canvas id="myCanvas" width="500" height="400"></canvas>
 	<div id="d1"></div>
 <h4>
 	<b class="text-danger">NOTE : </b> PRESS ANY KEYBOARD KEY 
